# multiclass-information-bottleneck-images

./: .gitignore  Makefile  README.md  dockerfile  pyproject.toml
notebooks/: Information Bottleneck Images - Calltech  Information Bottleneck Images - Calltech.ipynb  Information Bottleneck Images - Sports Balls.ipynb  Information Bottleneck Images.ipynb  Tarea_Capsula_2_Entregable.ipynb
notebooks/.ipynb_checkpoints/: Information Bottleneck Images-checkpoint.ipynb
